--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Calculator</title>
+    <title>JS Calculator</title>
   </head>
   <body>
-    <div class="calculator-grid">
-      <div class="output">
-        <div data-previous-operand class="previous-operand"></div>
-        <div data-current-operand class="current-operand"></div>
+    <div id="root">
+      <h1>Calculator</h1>
+      <div class="main">
+        <div class="display">
+          <input type="text" class="small-display" />
+          <input type="text" class="large-display" placeholder="0" />
+        </div>
+        <div class="inputs">
+          <button class="is-clear">C</button>
+          <button class="is-operator">&divide;</button>
+
+          <button class="is-num">7</button>
+          <button class="is-num">8</button>
+          <button class="is-num">9</button>
+          <button class="is-operator">&times;</button>
+
+          <button class="is-num">4</button>
+          <button class="is-num">5</button>
+          <button class="is-num">6</button>
+          <button class="is-operator">&minus;</button>
+
+          <button class="is-num">1</button>
+          <button class="is-num">2</button>
+          <button class="is-num">3</button>
+          <button class="is-operator">&plus;</button>
+
+          <button class="is-num is-zero">0</button>
+          <button class="is-equals">&equals;</button>
+        </div>
       </div>
-      <button data-all-clear class="span-two">AC</button>
-      <button data-delete>DEL</button>
-      <button data-operation>÷</button>
-      <button data-number>1</button>
-      <button data-number>2</button>
-      <button data-number>3</button>
-      <button data-operation>*</button>
-      <button data-number>4</button>
-      <button data-number>5</button>
-      <button data-number>6</button>
-      <button data-operation>+</button>
-      <button data-number>7</button>
-      <button data-number>8</button>
-      <button data-number>9</button>
-      <button data-operation>-</button>
-      <button data-number>.</button>
-      <button data-number>0</button>
-      <button data-equals class="span-two">=</button>
     </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
