updated css file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>Calculator</h1>
+      <h1>Calcumate.</h1>
       <div class="main">
         <div class="display">
           <input type="text" class="small-display" />
@@ -17,11 +17,13 @@
         </div>
         <div class="inputs">
           <button class="is-clear">C</button>
+          <button class="is-delete">DEL</button>
+          <button class="is-num">%</button>
           <button class="is-operator">&divide;</button>
 
-          <button class="is-num">7</button>
-          <button class="is-num">8</button>
           <button class="is-num">9</button>
+          <button class="is-num">8</button>
+          <button class="is-num">7</button>
           <button class="is-operator">&times;</button>
 
           <button class="is-num">4</button>
@@ -35,6 +37,8 @@
           <button class="is-operator">&plus;</button>
 
           <button class="is-num is-zero">0</button>
+          <button class="is-num is-decimal">.</button>
+
           <button class="is-equals">&equals;</button>
         </div>
       </div>
