update css file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="inputs">
           <button class="is-clear">C</button>
           <button class="is-delete">DEL</button>
-          <button class="is-num">%</button>
+          <button class="is-percent">%</button>
           <button class="is-operator">&divide;</button>
 
           <button class="is-num">9</button>
@@ -37,6 +37,7 @@
           <button class="is-operator">&plus;</button>
 
           <button class="is-num is-zero">0</button>
+          <button class="is-num is-double-zero">00</button>
           <button class="is-num is-decimal">.</button>
 
           <button class="is-equals">&equals;</button>
