update all files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root">
-      <h1><span>Calcu</span>mate.</h1>
+      <h1><span> &#9829 Calcu</span>mate &#9786;</h1>
       <div class="main">
         <div class="display">
           <input type="text" class="small-display" />
